--- a/reSOUND/Views/Base.lproj/Main.storyboard
+++ b/reSOUND/Views/Base.lproj/Main.storyboard
@@ -1480,7 +1480,7 @@
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="8zP-zs-O2u"/>
-        <segue reference="Ozv-Mf-40s"/>
+        <segue reference="jqo-PF-NWc"/>
         <segue reference="2Pl-nZ-f8r"/>
     </inferredMetricsTieBreakers>
 </document>
